--- a/public/css/screen.scss
+++ b/public/css/screen.scss
@@ -18,10 +18,11 @@
 
 #popup {
     background-color: $color-content-background;
-    padding:1em;
     border: (1rem/16) solid $cob-gray-dark;
     border-radius: (8rem/16);
     box-shadow: 0 (8rem/16) 1rem 0 rgba(0, 0, 0, .5);
+    padding:1em;
+    width: 30em;
 
     &:before {
         border: (8rem/16) solid transparent;
@@ -48,6 +49,19 @@
             left: 50%;
         width: 0;
     }
+    > a {
+        color: $cob-gray-darkest;
 
-    .geography { display:none; }
+        > h2 {
+            color: $cob-blue-dark;
+            font-weight: 300;
+            margin: 0 0 0 0;
+        }
+        > .dates {
+            color: $cob-gray-darkest;
+            font-size: (13rem/16);
+            margin: 0 0 1rem 0;
+        }
+        > .geography { display:none; }
+    }
 }
