First draft implementation of using map marker icons instead of arrow icons.
Mostly committing this to version control the SVG files.

--- a/public/css/sass-modules/_panelList.scss
+++ b/public/css/sass-modules/_panelList.scss
@@ -11,7 +11,7 @@
     margin: 0;
     padding: .5rem .5rem 0 .5rem;
     position: relative;
-    transition: background-color .25s ease-in-out;
+    transition: background-color .2s ease-in-out;
 
     > .title {
         color: $color-link;
@@ -64,40 +64,43 @@
         opacity: 1;
     }
 */
-    &.hasGeography {
-        &:after {
-            background: url('images/forward-arrow.svg') no-repeat 75% 50% / 100% 100%;
-            content: ' ';
-            display: block;
-            height: (19rem/16);
-            margin-top: (-8.5rem/16);
-            opacity: .2;
-            position: absolute;
-                right: .75rem;
-                top: 50%;
-            transition: opacity .25s ease-in-out, width .25s ease-in-out, height .25s ease-in-out, margin .25s ease-in-out;
-            width: (12rem/16);
-        }
-        &:hover:after {
-            opacity: 1;
-        }
+    &:before {
+        background: url('images/locationMarker-listing-noGeo.svg') no-repeat 50% 50%;
+        content: ' ';
+        display: block;
+        height: (17rem/16);
+        margin-top: (-8.5rem/16);
+        opacity: .2;
+        position: absolute;
+            right: .75rem;
+            top: 50%;
+        transition: opacity .2s ease-in-out, width .2s ease-in-out, height .2s ease-in-out, margin .2s ease-in-out;
+        width: (15rem/16);
+    }
+    &:hover:before {
+        opacity: 1;
+    }
+    > div, > h2 {
+        transition: color .2s ease-in-out;
+    }
+    &.current {
+        background-color: $cob-blue-light;
         > div, > h2 {
-            transition: color .25s ease-in-out;
+            color: #fff;
         }
-        &.current {
-            background-color: $cob-blue-light;
-            > div, > h2 {
-                color: #fff;
-            }
-            &:after {
-                background-color: #fff;
-                background-size: 75% 75%;
-                border-radius: 2rem;
-                margin-top: (-12.5rem/16);
-                opacity: 1;
-                height: (25rem/16);
-                width: (25rem/16);
-            }
+        &:before {
+            background-color: #fff;
+            background-size: 75% 75%;
+            border-radius: 2rem;
+            margin-top: (-12.5rem/16);
+            opacity: 1;
+            height: (25rem/16);
+            width: (25rem/16);
+        }
+    }
+    &.hasGeography {
+        &:before {
+            background-image: url('images/locationMarker-listing.svg');
         }
     }
 }
