--- a/public/css/sass-modules/_panelList.scss
+++ b/public/css/sass-modules/_panelList.scss
@@ -8,6 +8,7 @@
 }
 .panelItem {
     display: block;
+    border-bottom: 1px solid $cob-gray;
     margin: 0;
     padding: .5rem .5rem 0 .5rem;
     position: relative;
@@ -21,7 +22,6 @@
         margin: 0 2.5rem .25rem 0;
     }
     > .dates {
-        border-bottom: 1px solid $cob-gray;
         color: $cob-gray-dark;
         display: block;
         font-size: (12rem/16);
@@ -31,39 +31,6 @@
     > .description { display:none; }
     > .geography   { display:none; }
 
-/*
-    &:before {
-        background: $color-link;
-        content: ' ';
-        display: block;
-        height: (12rem/16);
-        margin: (-3rem/16) 0 0 0;
-        opacity: 0;
-        position: absolute;
-            top: 50%;
-            right: (1rem);
-        transform: rotate(45deg);
-        transition: background-color .25s ease-in-out, opacity .25s ease-in-out;
-        width: (3rem/16);
-    }
-    &:after {
-        background: $color-link;
-        content: ' ';
-        display: block;
-        height: (12rem/16);
-        margin: (-9.5rem/16) 0 0 0;
-        opacity: 0;
-        position: absolute;
-            top: 50%;
-            right: (1rem);
-        transform: rotate(-45deg);
-        transition: background-color .25s ease-in-out, opacity .25s ease-in-out;
-        width: (3rem/16);
-    }
-    &:hover:before, &:hover:after {
-        opacity: 1;
-    }
-*/
     &:before {
         background: url('images/locationMarker-listing-noGeo.svg') no-repeat 50% 50%;
         content: ' ';
@@ -88,6 +55,8 @@
         > div, > h2 {
             color: #fff;
         }
+        > .description { display:block; }
+
         &:before {
             background-color: #fff;
             background-size: 75% 75%;
