--- a/public/css/sass-modules/_panels.scss
+++ b/public/css/sass-modules/_panels.scss
@@ -1,6 +1,6 @@
 .mapPanel {
     position: absolute;
-        top: 4.35rem;
+        top: 0;
         right: 0;
         bottom: 0;
         left: 0;
