--- a/public/css/sass-modules/_vars-mixins.scss
+++ b/public/css/sass-modules/_vars-mixins.scss
@@ -61,6 +61,13 @@ $color-button-background-current: $cob-blue;
 $color-button-text: $cob-gray-darkest;
 $color-button-text-active: #fff;
 
+$color-footer-background: $cob-nightshade;
+$color-footer-links: $cob-gray;
+$color-footer-heading: $cob-gray-light;
+
+$color-filters-background: $cob-gray-dark;
+$color-filters-text: #fff;
+
 $size-font-default: 100%;
 
 $font-weight-heading: 600;
