--- a/public/css/screen.scss
+++ b/public/css/screen.scss
@@ -1,6 +1,7 @@
 @import 'sass-modules/_normalize';
 @import 'sass-modules/_vars-mixins';
 @import 'sass-modules/_fonts';
+@import 'sass-modules/_footer';
 @import 'sass-modules/_layout';
 @import 'sass-modules/_html-elements';
 @import 'sass-modules/_header';
