--- a/public/css/sass-modules/_layout.scss
+++ b/public/css/sass-modules/_layout.scss
@@ -2,64 +2,59 @@
 .full-width #content-panel { }
 
 .two-column {
-    > #panel-one {
-        position: absolute;
-            top: 4.35rem;
-            bottom: 0;
-            left: 0;
-        width: 20rem;
-        @media screen and (min-width: 84rem) {
-            width: 25rem;
+    > main {
+        > #panel-one {
+            position: absolute;
+                top: 4.35rem;
+                bottom: 0;
+                left: 0;
+            width: 20rem;
+            @media screen and (min-width: 84rem) {
+                width: 25rem;
+            }
         }
-    }
 
-    > #content-panel {
-        position: absolute;
-            top: 4.35rem;
-            left: 20rem;
-            bottom: 0;
-            right: 0;
-        @media screen and (min-width: 84rem) {
-            left: 25rem;
+        > #content-panel {
+            position: absolute;
+                top: 4.35rem;
+                left: 20rem;
+                bottom: 0;
+                right: 0;
+            @media screen and (min-width: 84rem) {
+                left: 25rem;
+            }
         }
     }
 }
 .three-column {
-    > #panel-one {
-        position: absolute;
-            top: 4.35rem;
-            bottom: 0;
-            left: 0;
-        width: 13rem;
-
-        > footer {
-            background: $cob-gray-darkest;
-            color: #fff;
+    > main {
+        > #panel-one {
             position: absolute;
-                right: 0;
+                top: 4.35rem;
                 bottom: 0;
                 left: 0;
+            width: 13rem;
         }
-    }
-    > #panel-two {
-        position: absolute;
-            top: 4.35rem;
-            bottom: 0;
-            left: 13rem;
-        overflow: auto;
-        width: 22rem;
-        @media screen and (min-width: 84rem) {
-            width: 27rem;
+        > #panel-two {
+            position: absolute;
+                top: 4.35rem;
+                bottom: 0;
+                left: 13rem;
+            overflow: auto;
+            width: 22rem;
+            @media screen and (min-width: 84rem) {
+                width: 27rem;
+            }
         }
-    }
-    > #content-panel {
-        position: absolute;
-            top: 4.35rem;
-            left: 35rem;
-            bottom: 0;
-            right: 0;
-        @media screen and (min-width: 84rem) {
-            left: 40rem;
+        > #content-panel {
+            position: absolute;
+                top: 4.35rem;
+                left: 35rem;
+                bottom: 0;
+                right: 0;
+            @media screen and (min-width: 84rem) {
+                left: 40rem;
+            }
         }
     }
 }
