--- a/public/css/sass-modules/_selector.scss
+++ b/public/css/sass-modules/_selector.scss
@@ -64,6 +64,7 @@
 
         > a {
             color: $cob-gray-darkest;
+            cursor: pointer;
             display: block;
             line-height: 1.2em;
             padding: .1em 1em;
