--- a/public/css/sass-modules/_panelList.scss
+++ b/public/css/sass-modules/_panelList.scss
@@ -4,10 +4,22 @@
     overflow-x: auto;
 }
 .panelItem {
+    &-container {
+        position: relative;
+        > .edit {
+            background: url('images/pencil.svg') no-repeat 0 0 / 100% 100%;
+            height: 1rem;
+            overflow: hidden;
+            position: absolute;
+                top: 1rem;
+                right: 2rem;
+            text-indent: -100rem;
+            width: 1rem;
+        }
+    }
     display: block;
     margin: 0;
     padding: .5rem .5rem 0 .5rem;
-    position: relative;
     transition: background-color .2s ease-in-out;
 
     &:after {
@@ -53,11 +65,6 @@
 
         &:before {
             transform: rotate(180deg);
-        }
-    }
-    &.hasGeography {
-        &:before {
-//            background-image: url('images/locationMarker-listing.svg');
         }
     }
     > .title {
