--- a/public/css/sass-modules/_openLayers.scss
+++ b/public/css/sass-modules/_openLayers.scss
@@ -1,7 +1,7 @@
 // Overrides for OpenLayers
 
 .mapPanel {
-    background-color: #f1eee8; // <- color sampled from a screenshot of OpenLayers
+    background-color: #eeeeee; // <- color sampled from a screenshot of mapbox.light
     .ol {
         &-control {
             background: none;
