--- a/public/css/sass-modules/_vars-mixins.scss
+++ b/public/css/sass-modules/_vars-mixins.scss
@@ -15,8 +15,10 @@ $cob-blue-dark: #143a7a;
 $cob-blue-darkest: #06204b;
 
 // Cornflower
-$cornflower-brightest: #acf2ff;
-$cornflower-darkest: #12314c;
+$cob-cornflower-brightest: #acf2ff;
+$cob-cornflower-light: #5991c2;
+$cob-cornflower: #447aa8;
+$cob-cornflower-darkest: #12314c;
 
 // Action Green
 $cob-green: #20ac59;
