--- a/public/css/sass-modules/_panelList.scss
+++ b/public/css/sass-modules/_panelList.scss
@@ -9,7 +9,26 @@
         > .edit {
             position: absolute;
                 top: 1rem;
-                right: 2rem;
+                right: 3rem;
+        }
+        &.hasGeography {
+            &:before {
+                background: url('images/locationMarker-listing.svg') no-repeat 0 0 / 100% 100%;
+                content: ' ';
+                display: block;
+                height: 1rem;
+                opacity: .5;
+                position: absolute;
+                    top: .75rem;
+                    right: 2rem;
+                transition: opacity .25s ease-in-out;
+                width: 1rem;
+            }
+        }
+        &:hover.hasGeography {
+            &:before {
+                opacity: 1;
+            }
         }
     }
     display: block;
@@ -56,7 +75,10 @@
             color: $cob-gray-darkest;
         }
 
-        > .description { display:block; }
+        > .description {
+            display:block;
+            padding: 0 0 (10rem/16) 0;
+        }
 
         &:before {
             transform: rotate(180deg) translateY((5rem/16));
@@ -67,7 +89,7 @@
         display: block;
         font-family: $font-family-default;
         font-size: (14rem/16);
-        margin: 0 2.5rem .25rem 0;
+        margin: 0 3rem (2rem/16) 0;
     }
     > .dates {
         color: $cob-gray-dark;
@@ -76,7 +98,9 @@
         padding: 0 2.5rem .5rem 0;
     }
     > .type        { display:none; }
-    > .description { display:none; }
+    > .description {
+        display:none;
+    }
     > .geography   { display:none; }
 
     @media screen and (min-width: 84rem) {
