--- a/public/css/sass-modules/_panelList.scss
+++ b/public/css/sass-modules/_panelList.scss
@@ -18,6 +18,7 @@
                 display: block;
                 height: 1rem;
                 opacity: .5;
+                pointer-events: none;
                 position: absolute;
                     top: .75rem;
                     right: 2rem;
